test/corpus/tests.txt
==================
Basic test
==================

{"a":"hello"}

---

(source_file
  (dictionary
    (field
      key: (string)
      value: (string))))

==================
Numbers
==================

{
  "a": "hello",
  "b": 25,
  "c": 0.002
}

---

(source_file
  (dictionary
    (field
      key: (string)
      value: (string))
    (field
      key: (string)
      value: (number))
    (field
      key: (string)
      value: (number))))

==================
Arrays
==================

{
  "a": "hello",
  "b": 25,
  "asd": [],
  "wasd": ["a", 2]
}

---

(source_file
  (dictionary
    (field
      key: (string)
      value: (string))
    (field
      key: (string)
      value: (number))
    (field
      key: (string)
      value: (array))
    (field
      key: (string)
      value: (array
        (string)
        (number)))))

==================
Null
==================

{
  "a": "hello",
  "b": 25,
  "asd": null,
  "wasd": [
    "a",
    2
  ],
  "ooaa": 0,
  "d": ""
}

---

(source_file
  (dictionary
    (field
      key: (string)
      value: (string))
    (field
      key: (string)
      value: (number))
    (field
      key: (string)
      value: (null))
    (field
      key: (string)
      value: (array
        (string)
        (number)))
    (field
      key: (string)
      value: (number))
    (field
      key: (string)
      value: (string))))

==================
Strings
==================

{
  "a": "hell9oąčęąčę",
  "b": "",
  "c": "abc0123",
  "d\"": "h\"a\"\n"
}

---

(source_file
  (dictionary
    (field
      key: (string)
      value: (string))
    (field
      key: (string)
      value: (string))
    (field
      key: (string)
      value: (string))
    (field
      key: (string)
      value: (string))))